--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-    laravel.test:
+    flashcardpro-app:
         container_name: flashcardpro-app
         build:
             context: ./docker/8.4
